This file documents the revision history for Zucchini

0.0.13
    - add tt_option to config (passed thorugh as Template::Toolkit options)

0.0.12  Sun Nov 30 14:40:01 GMT 2008
    - make moose packages immutable
    - added cli_defaults to .zucchini configuration file

0.0.11  Tue Aug 26 08:44:09 BST 2008
    - removed Class::Std dependency
    - added "use warnings" to tutorial POD file
    - force stringification of Path::Class file() results to resolve
      File::Copy::_eq() issue that's appeared in perl-5.10

0.0.10  Sun Aug 24 20:30:54 BST 2008
    - added missing build dependency to Makefile.PL

0.0.9   Fri Aug 22 19:26:30 BST 2008
    - added missing t/testdata file

0.0.8   Fri Aug 22 19:16:30 BST 2008
    - converted from Class:Std to Moose base objects
    - extended/improved test suite
    - refactored common test code into ::Test module

0.0.7   Tue Aug  5 20:10:56 BST 2008
    - added HTML error checking (HTML::Lint)
    - added missing --options to script/zucchini POD usage

0.0.6   Thu May 22 08:56:06 BST 2008
    - only show missing digest warnings if we're verbose enough
    - only try to prepare remote FTP connection once
    - better handling when trying to process a site that's not defined
    - made some improvements for some cases that occur with new users
    - added tutorial

0.0.5   Fri May 16 09:10:57 BST 2008
    - fixed fsync transfer with non-root 'path'

0.0.4   Thu May 15 22:55:07 BST 2008
    - added Contributors
    - added lots of documentation for modules

0.0.3   Wed May 14 20:24:15 BST 2008
    - moved ttsite.original to legacy/
    - no_index added for legacy/
    - --version option added to script/zucchini
    - added --create-config
    - fixed tests to work with ::TestConfig

0.0.2   2008-05-13 23:17:50 +0100
    - fixed MANIFEST omissions

0.0.1   2008-05-13 22:54:12 +0100
    - Initial project release
