@@ -616,7 +616,7 @@ Chisel Wright C<< <chiselwright@users.berlios.de> >>
 
 =head1 LICENSE
 
-Copyright 2008 by Chisel Wright
+Copyright 2008-2009 by Chisel Wright
 
 This program is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
